--- a/index.html
+++ b/index.html
@@ -28,23 +28,68 @@
 
         .flex-container {
             display: flex;
-            background-color: #006D6D;
             justify-content: space-around;
-            padding: 20px;
         }
 
-        .header-title{
+        .header-title {
             color: #006F6F;
             font-size: 32px;
             font-weight: 700;
             margin-bottom: 20px;
         }
 
-        .header-subtitle{
+        .header-subtitle {
             color: #009E9E;
             font-size: 18px;
             font-weight: 500;
             margin-bottom: 15px;
+        }
+
+        .col-1 {
+            background-color: #006D6D;
+            width: 50%;
+            padding: 20px;
+            color: #FFF;
+        }
+
+        .col-2 {
+            background-color: #009E9E;
+            width: 50%;
+            padding: 20px;
+            color: #FFF;
+        }
+
+        .subscription-title{
+            font-size: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .price{
+            font-size: 26px;
+            font-weight: 700;
+        }
+
+        .month{
+            font-style: italic;
+            font-size: 15px;
+            margin-left: 15px;
+        }
+
+        .button{
+            margin-top: 20px;
+            width: 100%;
+            padding: 15px 32px;
+            color: #006D6D;
+            font-size: 16px;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            background-color: #F0F0F0;
+        }
+
+        .button:hover{
+            background-color: #E9E9E9;
         }
     </style>
 </head>
@@ -64,10 +109,21 @@
             </div>
         </div>
         <div class="flex-container">
-            <div>
-                Coluna 1
+            <div class="col-1">
+                <div class="subscription-title">
+                    Assinatura mensal:
+                </div>
+                <div>
+                    <span class="price">R$ 99,99</span>
+                    <span class="month">por mês.</span> 
+                </div>
+                <div>
+                    Cancele a qualquer momento.
+                </div>
+                <button class="button">Assine agora</button>
             </div>
-            <div>
+
+            <div class="col-2">
                 Coluna 2
             </div>
         </div>
