closes #5 - Tags ul e li

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>BootCamp DevJr - Sistema de Assinaturas</title>
 
     <style>
@@ -55,28 +57,28 @@
         .col-2 {
             background-color: #009E9E;
             width: 50%;
-            padding: 20px;
+            padding: 10px 20px;
             color: #FFF;
         }
 
-        .subscription-title{
+        .subscription-title {
             font-size: 20px;
             text-align: center;
             margin-bottom: 20px;
         }
 
-        .price{
+        .price {
             font-size: 26px;
             font-weight: 700;
         }
 
-        .month{
+        .month {
             font-style: italic;
             font-size: 15px;
             margin-left: 15px;
         }
 
-        .button{
+        .button {
             margin-top: 20px;
             width: 100%;
             padding: 15px 32px;
@@ -88,8 +90,17 @@
             background-color: #F0F0F0;
         }
 
-        .button:hover{
+        .button:hover {
             background-color: #E9E9E9;
+        }
+
+        .image-group {
+            color: white;
+            text-align: center;
+        }
+
+        .icon{
+            font-size: 45px;
         }
     </style>
 </head>
@@ -115,7 +126,7 @@
                 </div>
                 <div>
                     <span class="price">R$ 99,99</span>
-                    <span class="month">por mês.</span> 
+                    <span class="month">por mês.</span>
                 </div>
                 <div>
                     Cancele a qualquer momento.
@@ -124,7 +135,24 @@
             </div>
 
             <div class="col-2">
-                Coluna 2
+                <div class="image-group">
+                    <span class="material-symbols-outlined icon">
+                        groups
+                    </span>
+                </div>
+
+                <div>
+                    Você terá acesso
+                </div>
+
+                <ul>
+                    <li>Projetos exclusivos</li>
+                    <li>Tutoriais</li>
+                    <li>Lives semanais</li>
+                    <li>Material didático especializado</li>
+                    <li>Fórum</li>
+                    <li>Ofertas de empregos</li>
+                </ul>
             </div>
         </div>
     </div>
