--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         .header {
-            padding: 40px;
+            padding: 2.5rem;
         }
 
         .flex-container {
@@ -35,55 +35,55 @@
 
         .header-title {
             color: #006F6F;
-            font-size: 32px;
+            font-size: 2rem;
             font-weight: 700;
-            margin-bottom: 20px;
+            margin-bottom: 1.2rem;
         }
 
         .header-subtitle {
             color: #009E9E;
-            font-size: 18px;
+            font-size: 1.2rem;
             font-weight: 500;
-            margin-bottom: 15px;
+            margin-bottom: 0.9rem;
         }
 
         .col-1 {
             background-color: #006D6D;
             width: 50%;
-            padding: 20px;
+            padding: 1.2rem;
             color: #FFF;
         }
 
         .col-2 {
             background-color: #009E9E;
             width: 50%;
-            padding: 10px 20px;
+            padding: 0.6rem 1.2rem;
             color: #FFF;
         }
 
         .subscription-title {
-            font-size: 20px;
+            font-size: 1.2rem;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 1.2rem;
         }
 
         .price {
-            font-size: 26px;
+            font-size: 1.6rem;
             font-weight: 700;
         }
 
         .month {
             font-style: italic;
-            font-size: 15px;
-            margin-left: 15px;
+            font-size: 0.9rem;
+            margin-left: 0.9rem;
         }
 
         .button {
-            margin-top: 20px;
+            margin-top: 1.2rem;
             width: 100%;
-            padding: 15px 32px;
+            padding: 0.9rem 2rem;
             color: #006D6D;
-            font-size: 16px;
+            font-size: 1rem;
             border-radius: 4px;
             border: none;
             cursor: pointer;
@@ -100,7 +100,26 @@
         }
 
         .icon{
-            font-size: 45px;
+            font-size: 2.8rem;
+        }
+
+        @media screen and (max-width: 620px){
+            html{
+                font-size: 14px;
+            }
+
+            .flex-container{
+                flex-direction: column;
+            }
+
+            .col-1, .col-2{
+                width: 100%;
+                box-sizing: border-box;
+            }
+
+            .container{
+                width: 95%;
+            }
         }
     </style>
 </head>
