--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>BootCamp DevJr - Sistema de Assinaturas</title>
 </head>
 
@@ -36,12 +37,14 @@
                 <div>
                     Cancele a qualquer momento.
                 </div>
-                <button class="button">Assine agora</button>
+                <a href="register.html">
+                    <button>Assine agora</button>
+                </a>
             </div>
 
             <div class="col-2">
                 <div class="image-group">
-                    <span class="material-symbols-outlined icon">
+                    <span id="icon" class="material-symbols-outlined">
                         groups
                     </span>
                 </div>
